--- a/sandbox/static/index.css
+++ b/sandbox/static/index.css
@@ -7,3 +7,40 @@ img{
     width:20vw;
     margin:20px 40vw;
 }
+.config{
+    width:30vw;
+    margin:10px 35vw;
+    display: flex;
+}
+.api{
+    margin:auto;
+}
+.type{
+    margin:10px;
+    flex-grow: 1;
+}
+.test{
+    line-height: 18px;
+    font-size: 14px;
+    padding:4px;
+    border-radius: 10px;
+    outline:none;
+    cursor:pointer;
+}
+.test{
+    line-height: 18px;
+    font-size: 14px;
+    padding:4px;
+    border-radius: 10px;
+    outline:none;
+    cursor:pointer;
+}
+.datadiv{
+    width:80vw;
+    margin:10px 10vw;
+    padding:10px;
+    min-height:100px;
+    border:1px solid #999;
+    overflow: hidden;
+    word-wrap: break-word;
+}
